# Buku_Game

./: .clang-format  CMakeLists.txt  build_and_run.sh  comp.txt  comp_flag.txt  compile.txt  game  jogar  main.c  meu_jogo  move.c  rodar_agora  stack.c  stack.h
.cache/clangd/index/: board.c.29ADE91BDD0EA570.idx  board.h.3FC15782486588BB.idx  colors.h.637137EF52A20E55.idx  display.c.1BB2ED1EEE304306.idx  display.h.DFB69450F62F3803.idx  game.c.EB661DC91BEE3A0F.idx  game.h.230A127D17FC158C.idx  game_logic.c.264CF7C282DBC914.idx  game_logic.h.C0383D9A6B3C7021.idx  hand.c.91624C6446AF4B40.idx  hand.h.66E1E87FFC4E5CAA.idx  input.c.7A5885C9A5D86064.idx  input.h.4BAE6763BCFADD86.idx  main.c.81A4C7DAC814D7CF.idx  move.c.A56F82CC7A80C123.idx  move.h.7F17800E87C10580.idx  player.c.8489508629388969.idx  player.h.7066E9510777B8DB.idx  stack.c.7C0119D54BCEFFF1.idx  stack.h.3675EECD2793822C.idx
include/: board.h  colors.h  game.h  hand.h  makeMove.h  move.h  player.h  stack.h
include/domain/: board.h  game.h  game_logic.h  hand.h  player.h  stack.h
include/ui/: display.h  input.h
source/: board.c  colors.c  game.c  hand.c  main.c  move.c  player.c  stack.c  teste
source/domain/: board.c  game.c  game_logic.c  hand.c  player.c  stack.c
source/ui/: display.c  input.c
src/: board.c  hand.c  main.c  makeMove.c  stack.c
test/: test  test.c
